# OpenGl

./: .gitignore  CMakeLists.txt
scr/: main.cpp
